--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,23 @@
 version: '3'
 
 services:
-  frontend:
-    image: nginx:1.13
-    volumes:
-      - /etc/letsencrypt/:/etc/letsencrypt/
-      # Mapeamento da configuração do proxy reverso
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-    ports:
-      - 80:80
-      - 443:443
-    depends_on:
-      - app
+  #frontend:
+  #  image: nginx:1.13
+  #  volumes:
+  #    # Mapeamento da configuração do proxy reverso
+  #    - ./nginx/:/etc/nginx/
+  #  ports:
+  #    - 80:80
+  #    - 443:443
+  #  depends_on:
+  #    - app
   app:
     image: node:8
     volumes:
       # Mapeamento do aplcativo
       - ./app:/usr/src/app
+    ports:
+      - 8080:8080
     working_dir: /usr/src/app
     command: bash app.sh
     
