--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "angular-font-awesome": "^3.1.2",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.0",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
